Fixed size on tablets

--- a/css/mobile_style.css
+++ b/css/mobile_style.css
@@ -4,27 +4,38 @@ div, body {
   	color: #FFFFFF;
 }
 
+/*body {
+  	background-image: linear-gradient( to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9) ), url("../images/background_image_mobile.png");
+	background-color: #4a4a4a;
+	background-repeat: no-repeat;
+  	background-size: cover;
+  	-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+  	background-attachment: fixed;
+} */
+
 .background_image {
-  width: 100%;
-  height: 70%;
-  display: block;
+	width: auto;
+  	max-width: 100%;
+  	height: auto;
 }
 
 #footer {
 	background-color: #003D66;
-	width: 100%;
-	height: 100%;
-	bottom: 0%;
+	bottom: 0;
 	display: block;
+	width: 100%;
+	position: absolute;
 }
 
 .information-container {
    position: relative;
    width: 100%;
+   margin-bottom: 30px;
 }
 
 .information {
-  padding-top: 15.5pt;
   text-align: center;
 }
 
@@ -33,8 +44,11 @@ div, body {
   padding-bottom: 30px;
 }
 
+#logo img {
+	width: 50%;
+}
+
 #subtext {
-  margin-top: 30px;
   display: inline-block;
   text-align: left;
 }
@@ -46,39 +60,40 @@ div, body {
 .title {
 	padding-top: 16px;
 	padding-bottom: 14px;
-	font-size: 43px;
-	letter-spacing: 0.06px;
+	font-size: 24px;
+	letter-spacing: 0.03px;
 	font-family: 'Lora-Regular', 'Arial', 'Helvatica', serif;
 }
 
 .subtitle {
-	font-size: 18px;
+	font-size: 12px;
 	letter-spacing: 0.02px;
 	line-height: 20px;
 }
 
 #contact {
-	margin-top: 60px;
+	padding-top: 30px;
 	display: inline-block;
 	text-align: left;
 }
 
 .info-section {
-	line-height: 100%;
-	padding-bottom: 12pt;
+	padding-bottom: 20px;
 }
 
 .icon {
+	width: 8pt;
+	height: 8pt;
 	padding-right: 14px;
 	display: inline-block;
 	vertical-align: top;
 }
 
 .info-text {
-	font-size: 18px;
+	font-size: 12px;
 	color: #FFFFFF;
 	letter-spacing: 0.03px;
-	line-height: 20px;
+	line-height: 8px;
 	display: inline-block;
 	vertical-align: middle;
 }
