--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ div, body {
 
 .info-section {
 	line-height: 100%;
-	padding-bottom: 12pt;
+	padding-bottom: 30px;
 }
 
 .icon {
